Fix pyproject.toml syntax

--- a/services/tasks_api/pyproject.toml
+++ b/services/tasks_api/pyproject.toml
@@ -1,22 +1,15 @@
-[project]
+[tool.poetry]
 name = "tasks-api"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "tom.harkness",email = "1tomharkness@gmail.com"}
-]
+authors = ["tom.harkness <1tomharkness@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-    "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.2,<0.35.0)",
-    "httpx (>=0.28.1,<0.29.0)"
-]
 
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+python = ">=3.10"
+fastapi = ">=0.115.12,<0.116.0"
+uvicorn = ">=0.34.2,<0.35.0"
+httpx = ">=0.28.1,<0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
@@ -26,3 +19,6 @@ isort = "^6.0.1"
 flake8 = "^7.2.0"
 bandit = "^1.8.3"
 
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
