--- a/services/tasks_api/pyproject.toml
+++ b/services/tasks_api/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.9"
 fastapi = ">=0.115.12,<0.116.0"
 uvicorn = ">=0.34.2,<0.35.0"
 httpx = ">=0.28.1,<0.29.0"
+mangum = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
